fix(components): fix text align in the header of table

--- a/shared/components/Table/Table.module.scss
+++ b/shared/components/Table/Table.module.scss
@@ -21,9 +21,7 @@
 .tableHeadCell {
   padding: $spacing-m;
 
-  &:first-child {
-    text-align: left;
-  }
+  text-align: left;
 
   &:last-child {
     text-align: right;
